--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,11 +5,11 @@ Version: 1.0.0
 Authors@R: person("Sevvandi", "Kandanaarachchi", email = "sevvandik@gmail.com",
   role = c("aut", "cre"), comment = c(ORCID = "0000-0002-0337-0395"))
 Maintainer: Sevvandi Kandanaarachchi <sevvandik@gmail.com>
-Description: DOBIN: a Distance based Outlier BasIs using Neighbours, is a dimension 
-    reduction technique for outlier detection. It constructs a set of basis vectors 
-    for outlier detection. This is not an outlier detection method; rather it is a 
-    pre-processing method for outlier detection. It brings outliers to the fore-front 
-    using fewer basis vectors (Kandanaarachchi, Hyndman 2019)<doi:10.13140/RG.2.2.15437.18403>. 
+Description: A dimension reduction technique for outlier detection. DOBIN: a Distance 
+    based Outlier BasIs using Neighbours, constructs a set of basis vectors for outlier 
+    detection. This is not an outlier detection method; rather it is a pre-processing 
+    method for outlier detection. It brings outliers to the fore-front using fewer basis 
+    vectors (Kandanaarachchi, Hyndman 2019)<doi:10.13140/RG.2.2.15437.18403>. 
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
