--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,7 +1,9 @@
+^docs$
+^_pkgdown\.yml$
 ^README_files$
-^README\.md$
 ^\.travis\.yml$
 ^README\.Rmd$
 ^LICENSE\.md$
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^README\.md$
