--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,10 @@
-pandoc: '2.9'
-pkgdown: 1.4.0
+pandoc: 2.17.1.1
+pkgdown: 2.0.3
 pkgdown_sha: ~
 articles:
   dobin: dobin.html
+last_built: 2022-05-16T01:47Z
 urls:
-  reference: https://sevvandi.github.io/dobin//reference
-  article: https://sevvandi.github.io/dobin//articles
+  reference: https://sevvandi.github.io/dobin/reference
+  article: https://sevvandi.github.io/dobin/articles
 
