--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,9 +14,9 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports: 
+    dbscan,
     ggplot2,
-    pracma,
-    RANN
+    pracma
 RoxygenNote: 7.1.2
 Suggests: 
     knitr,
